# jaranara

./: .gitignore  README.md  app.py  auto_start_ui.sh  channel_names.json  create_desktop_shortcuts.sh  install_jaranara.sh  jaranara_desktop.py  pyproject.toml  requirements.txt  run_jaranara.sh
static/: history.js  script.js  style.css
templates/: history.html  index.html
